# sys3c

./: CHANGELOG.md  README.md  meson.build  regression_test.sh  rtt.sh
.github/workflows/: ci.yml  windows.yml
common/: ag00.c  ald.c  common.h  common_tests.c  dri.c  game_id.c  s2utbl.h  sjisutf.c  sjisutf_test.c  util.c
compiler/: ain.c  compile.c  compile_test.c  config.c  debuginfo.c  hel.c  hel_test.c  lexer.c  sco.c  sco_test.c  sys3c.c  sys3c.h  xsys35c.c
decompiler/: ain.c  cali.c  decompile.c  preprocess.c  sys3dc.c  sys3dc.h  xsys35dc.c  xsys35dc.h
docs/: HACKING.md  ald.adoc  alk.adoc  dri.adoc  sys3c.adoc  sys3dc.adoc  translating.adoc  unicode.adoc  vsp.adoc
examples/: m17n.adv
misc/: compile.bat  decompile.bat
testdata/source/: sys3c.cfg
tools/: ald.c  dri.c
